part1/1.11/manifests/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 5000
