part1/1.11/manifests/todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: traefik  # Updated field
  rules:
  - http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
